--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -4,5 +4,6 @@
 @import "./abstracts/mixins";
 @import "./components/sidebar";
 @import "./components/header";
+@import "./components/table";
 @import "./pages/login";
 @import "./pages/home";
