--- a/assets/scss/components/_sidebar.scss
+++ b/assets/scss/components/_sidebar.scss
@@ -186,10 +186,12 @@
 }
 
 #content {
+    width: calc(100% - 250px);
     margin-left: 250px; /* Content margin when sidebar is open */
     transition: all 0.3s;
 }
 
 #sidebar.collapsed ~ #content {
-    margin-left: 80px; /* Content margin when sidebar is collapsed */
+    width: calc(100% - 72px);
+    margin-left: 72px; /* Content margin when sidebar is collapsed */
 }
