--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 .poppins-thin {
   font-family: "Poppins", sans-serif;
@@ -219,14 +220,37 @@
 .sidebar-content .nav .nav-item .nav-link.active span {
   color: #387ff8;
 }
-.sidebar-content .logout-btn {
+.sidebar-content .sidebar-btn-group {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  row-gap: 35px;
+}
+.sidebar-content .sidebar-btn-group .toggle-btn {
+  width: 36px;
+  height: 36px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 8px;
+  background: #fff;
+  cursor: pointer;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
+  box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.12);
+}
+.sidebar-content .sidebar-btn-group .toggle-btn img {
+  transform: rotate(180deg);
+}
+.sidebar-content .sidebar-btn-group .logout-btn {
   display: flex;
   align-items: center;
   justify-content: flex-start;
   -moz-column-gap: 8px;
        column-gap: 8px;
 }
-.sidebar-content .logout-btn span {
+.sidebar-content .sidebar-btn-group .logout-btn span {
   color: #fff;
   font-family: "Inter", sans-serif;
   font-size: 18px;
@@ -268,21 +292,24 @@
   display: none;
   opacity: 0;
 }
-.sidebar.collapsed .sidebar-content .logout-btn {
+.sidebar.collapsed .sidebar-content .sidebar-btn-group {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  row-gap: 35px;
+}
+.sidebar.collapsed .sidebar-content .sidebar-btn-group .toggle-btn img {
+  transform: rotate(0deg);
+}
+.sidebar.collapsed .sidebar-content .sidebar-btn-group .logout-btn {
   width: 42px;
   padding: 10px !important;
 }
-.sidebar.collapsed .sidebar-content .logout-btn span {
+.sidebar.collapsed .sidebar-content .sidebar-btn-group .logout-btn span {
   display: none;
 }
 .sidebar.collapsed .sidebar-footer span {
   display: none;
-}
-
-#sidebar .toggle-btn {
-  cursor: pointer;
-  padding: 10px;
-  text-align: center;
 }
 
 #content {
@@ -299,14 +326,14 @@
 .page-header {
   width: 100%;
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-end;
   align-items: center;
 }
 .page-header .search-bar {
-  width: 610px;
+  width: 100%;
 }
 .page-header .search-bar .search-bar-inner {
-  width: 100%;
+  width: 610px;
 }
 .page-header .search-bar .search-bar-inner .search-input {
   display: flex;
@@ -352,12 +379,12 @@
   box-shadow: none;
 }
 @media only screen and (max-width: 1024px) {
-  .page-header .search-bar {
+  .page-header .search-bar .search-bar-inner {
     width: 400px;
   }
 }
 @media only screen and (max-width: 768px) {
-  .page-header .search-bar {
+  .page-header .search-bar .search-bar-inner {
     width: 80%;
   }
 }
@@ -546,4 +573,109 @@
 }
 .index-page .page-body .page-body-content {
   width: 100%;
+}
+
+.page-title {
+  color: #000;
+  font-family: "Poppins", sans-serif;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+
+.table-filter {
+  width: 100%;
+  margin-top: 9px;
+  /* Checkbox görünümünü ekle */
+  /* Checkbox stilini ekle */
+  /* Checkbox işaretlendiğinde stilini ekle */
+}
+.table-filter .table-filter-container {
+  width: 100%;
+  border-radius: 12px;
+  background-color: #fff;
+  padding: 25px 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.table-filter .table-filter-container .table-filter-inner {
+  max-width: 825px;
+}
+.table-filter .table-filter-container .table-filter-inner .table-filter-form {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 21px;
+}
+.table-filter .bootstrap-select .dropdown-menu li a span.check-mark {
+  display: none;
+}
+.table-filter .bootstrap-select .dropdown-menu li a {
+  padding-left: 35px; /* Checkbox'lar için sol boşluk */
+  position: relative;
+  display: flex;
+}
+.table-filter .dropdown-menu-footer {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+  border-top: 1px solid #ddd;
+  background-color: #f9f9f9;
+}
+.table-filter .dropdown-menu-footer .btn-reset {
+  color: #007bff;
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+.table-filter .dropdown-menu-footer .btn-ok {
+  background-color: #007bff;
+  color: white;
+}
+.table-filter .bootstrap-select .dropdown-menu li a span.check-mark {
+  display: none !important;
+}
+.table-filter .bootstrap-select .dropdown-menu li a::before {
+  content: "";
+  position: absolute;
+  left: 12px;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 16px;
+  height: 16px;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+  background-color: #fff;
+}
+.table-filter .bootstrap-select .dropdown-menu li a.selected::before {
+  content: "✓";
+  font-size: 12px;
+  color: #fff;
+  text-align: center;
+  line-height: 16px;
+  background-color: #387ff8;
+}
+.table-filter .bootstrap-select .inner.show {
+  max-height: 155px !important;
+  scrollbar-width: thin;
+  scrollbar-color: #387FF8 #f1f1f1;
+}
+.table-filter .bootstrap-select .inner.show::-webkit-scrollbar {
+  width: 3px;
+}
+.table-filter .bootstrap-select .inner.show::-webkit-scrollbar-track {
+  background: #387FF8;
+}
+.table-filter .bootstrap-select .inner.show::-webkit-scrollbar-thumb {
+  background: #387FF8;
+  border-radius: 10px;
+  border: 2px solid #f1f1f1;
+}
+.table-filter .bootstrap-select .inner.show::-webkit-scrollbar-thumb:hover {
+  background: #387FF8;
+}
+.table-filter .hidden-footer {
+  display: none;
 }/*# sourceMappingURL=style.css.map */
