--- a/assets/scss/components/_sidebar.scss
+++ b/assets/scss/components/_sidebar.scss
@@ -80,7 +80,9 @@
                         user-select: none;
                         opacity: 1;
                         transition: 0.8s;
-                        font-feature-settings: 'liga' off, 'clig' off;
+                        font-feature-settings:
+                            "liga" off,
+                            "clig" off;
                     }
                     &.active {
                         height: 47px;
@@ -104,21 +106,41 @@
                 }
             }
         }
-        .logout-btn {
+        .sidebar-btn-group {
+            width: 100%;
             display: flex;
-            align-items: center;
-            justify-content: flex-start;
-            column-gap: 8px;
-            img {
+            flex-direction: column;
+            row-gap: 35px;
+            .toggle-btn {
+                width: 36px;
+                height: 36px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                border-radius: 8px;
+                background: #fff;
+                cursor: pointer;
+                user-select: none;
+                box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.12);
+
+                img {
+                    transform: rotate(180deg);
+                }
             }
-            span {
-                color: #fff;
-                font-family: "Inter", sans-serif;
-                font-size: 18px;
-                font-style: normal;
-                font-weight: 500;
-                line-height: 150%;
-                letter-spacing: 0.09px;
+            .logout-btn {
+                display: flex;
+                align-items: center;
+                justify-content: flex-start;
+                column-gap: 8px;
+                span {
+                    color: #fff;
+                    font-family: "Inter", sans-serif;
+                    font-size: 18px;
+                    font-style: normal;
+                    font-weight: 500;
+                    line-height: 150%;
+                    letter-spacing: 0.09px;
+                }
             }
         }
     }
@@ -164,11 +186,22 @@
                     }
                 }
             }
-            .logout-btn {
-                width: 42px;
-                padding: 10px !important;
-                span {
-                    display: none;
+            .sidebar-btn-group {
+                width: 100%;
+                display: flex;
+                flex-direction: column;
+                row-gap: 35px;
+                .toggle-btn {
+                    img {
+                        transform: rotate(0deg);
+                    }
+                }
+                .logout-btn {
+                    width: 42px;
+                    padding: 10px !important;
+                    span {
+                        display: none;
+                    }
                 }
             }
         }
@@ -178,11 +211,6 @@
             }
         }
     }
-}
-#sidebar .toggle-btn {
-    cursor: pointer;
-    padding: 10px;
-    text-align: center;
 }
 
 #content {
