--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -5,6 +5,8 @@
 @import "./components/sidebar";
 @import "./components/header";
 @import "./components/table";
+@import "./components/modal";
 @import "./pages/login";
 @import "./pages/home";
 @import "./pages/customerdata";
+@import "./pages/sms";
