--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -124,9 +124,30 @@
   height: 100vh;
   border-right: 0.4px solid #969696;
   background: #fff;
+  z-index: 999;
 }
-.sidebar.collapsed {
-  width: 72px;
+@media only screen and (max-width: 768px) {
+  .sidebar {
+    position: absolute;
+    width: 100%;
+    transform: translateX(-100%);
+  }
+}
+@media only screen and (max-width: 480px) {
+  .sidebar {
+    max-width: 100%;
+  }
+}
+@media only screen and (min-width: 768px) {
+  .sidebar.collapsed {
+    width: 72px;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .sidebar.active {
+    width: 100%;
+    transform: translateX(0);
+  }
 }
 .sidebar-container {
   width: 100%;
@@ -142,6 +163,9 @@
   width: 100%;
   border-bottom: 1px solid #969696;
   padding: 15px 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 .sidebar-header .logo-md {
   width: 135.561px;
@@ -160,6 +184,15 @@
 .sidebar-header .logo-sm img {
   width: 100%;
   height: 100%;
+}
+.sidebar-header .sidebar-close {
+  font-size: 30px;
+  cursor: pointer;
+}
+@media only screen and (min-width: 768px) {
+  .sidebar-header .sidebar-close {
+    display: none;
+  }
 }
 .sidebar-content {
   width: 100%;
@@ -243,6 +276,11 @@
 .sidebar-content .sidebar-btn-group .toggle-btn img {
   transform: rotate(180deg);
 }
+@media only screen and (max-width: 768px) {
+  .sidebar-content .sidebar-btn-group .toggle-btn {
+    display: none;
+  }
+}
 .sidebar-content .sidebar-btn-group .logout-btn {
   display: flex;
   align-items: center;
@@ -270,57 +308,85 @@
   -moz-column-gap: 11px;
        column-gap: 11px;
 }
-.sidebar.collapsed .sidebar-header .logo-md {
+@media only screen and (min-width: 768px) {
+  .sidebar.collapsed .sidebar-header .logo-md {
+    display: none;
+  }
+  .sidebar.collapsed .sidebar-header .logo-sm {
+    display: block;
+  }
+  .sidebar.collapsed .sidebar-content .nav .nav-item .nav-link {
+    justify-content: center;
+  }
+  .sidebar.collapsed .sidebar-content .nav .nav-item .nav-link svg {
+    width: 20px;
+  }
+  .sidebar.collapsed .sidebar-content .nav .nav-item .nav-link.active {
+    height: 27px;
+    padding: 0px !important;
+    border-radius: 0;
+    background: transparent;
+  }
+  .sidebar.collapsed .sidebar-content .nav .nav-item .nav-link span {
+    display: none;
+    opacity: 0;
+  }
+  .sidebar.collapsed .sidebar-content .sidebar-btn-group {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    row-gap: 35px;
+  }
+  .sidebar.collapsed .sidebar-content .sidebar-btn-group .toggle-btn img {
+    transform: rotate(0deg);
+  }
+  .sidebar.collapsed .sidebar-content .sidebar-btn-group .logout-btn {
+    width: 42px;
+    padding: 10px !important;
+  }
+  .sidebar.collapsed .sidebar-content .sidebar-btn-group .logout-btn span {
+    display: none;
+  }
+  .sidebar.collapsed .sidebar-footer span {
+    display: none;
+  }
+}
+
+.hamburger-menu {
   display: none;
-}
-.sidebar.collapsed .sidebar-header .logo-sm {
-  display: block;
-}
-.sidebar.collapsed .sidebar-content .nav .nav-item .nav-link {
-  justify-content: center;
-}
-.sidebar.collapsed .sidebar-content .nav .nav-item .nav-link svg {
-  width: 20px;
-}
-.sidebar.collapsed .sidebar-content .nav .nav-item .nav-link.active {
-  height: 27px;
-  padding: 0px !important;
-  border-radius: 0;
-  background: transparent;
-}
-.sidebar.collapsed .sidebar-content .nav .nav-item .nav-link span {
-  display: none;
-  opacity: 0;
-}
-.sidebar.collapsed .sidebar-content .sidebar-btn-group {
   width: 100%;
-  display: flex;
-  flex-direction: column;
-  row-gap: 35px;
 }
-.sidebar.collapsed .sidebar-content .sidebar-btn-group .toggle-btn img {
-  transform: rotate(0deg);
+.hamburger-menu i {
+  font-size: 30px;
+  cursor: pointer;
 }
-.sidebar.collapsed .sidebar-content .sidebar-btn-group .logout-btn {
-  width: 42px;
-  padding: 10px !important;
-}
-.sidebar.collapsed .sidebar-content .sidebar-btn-group .logout-btn span {
-  display: none;
-}
-.sidebar.collapsed .sidebar-footer span {
-  display: none;
+@media only screen and (max-width: 768px) {
+  .hamburger-menu {
+    display: block;
+  }
 }
 
 #content {
   width: calc(100% - 250px);
-  margin-left: 250px; /* Content margin when sidebar is open */
+  margin-left: 250px;
   transition: all 0.3s;
+}
+@media only screen and (max-width: 768px) {
+  #content {
+    width: 100%;
+    margin-left: 0;
+  }
 }
 
 #sidebar.collapsed ~ #content {
   width: calc(100% - 72px);
-  margin-left: 72px; /* Content margin when sidebar is collapsed */
+  margin-left: 72px;
+}
+@media only screen and (max-width: 768px) {
+  #sidebar.collapsed ~ #content {
+    width: 100%;
+    margin-left: 0;
+  }
 }
 
 .page-header {
@@ -331,6 +397,11 @@
 }
 .page-header .search-bar {
   width: 100%;
+}
+@media only screen and (max-width: 768px) {
+  .page-header .search-bar {
+    display: none;
+  }
 }
 .page-header .search-bar .search-bar-inner {
   width: 610px;
@@ -426,6 +497,18 @@
   width: 100%;
   overflow-x: auto;
 }
+.table-container .table-container-inner::-webkit-scrollbar-track {
+  border-radius: 99px;
+  background: #ececec;
+}
+.table-container .table-container-inner::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+.table-container .table-container-inner::-webkit-scrollbar-thumb {
+  border-radius: 99px;
+  background: #387ff8;
+}
 .table-container .table-container-inner .table {
   width: 100%;
   min-width: 892px;
@@ -448,6 +531,61 @@
 }
 .table-container .table-container-inner .table .table-primary th:nth-last-child(1) {
   border-radius: 0px 8px 0px 0px;
+}
+.table-container .table-container-inner .table tr td img {
+  cursor: pointer;
+}
+
+.modal .modal-dialog {
+  max-width: 360px;
+}
+@media only screen and (max-width: 768px) {
+  .modal .modal-dialog {
+    max-width: var(--bs-modal-width);
+  }
+}
+.modal .modal-dialog .modal-content .modal-header {
+  justify-content: center;
+  border-bottom: none;
+}
+.modal .modal-dialog .modal-content .modal-header .modal-title {
+  color: #000;
+  font-family: "Poppins", sans-serif;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+.modal .modal-dialog .modal-content .modal-body label {
+  color: rgba(130, 130, 130, 0.87);
+  font-family: "Poppins", sans-serif;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+.modal .modal-dialog .modal-content .modal-body input {
+  height: 52px;
+  border-radius: 8px;
+  border: 1px solid #c1c1c1;
+}
+.modal .modal-dialog .modal-content .modal-body .position-relative {
+  position: relative;
+}
+.modal .modal-dialog .modal-content .modal-body .bi {
+  position: absolute;
+  right: 12px;
+  top: 68%;
+  transform: translateY(-50%);
+  cursor: pointer;
+  font-size: 1.2rem;
+  color: #888;
+}
+.modal .modal-dialog .modal-content .modal-body .bi:hover {
+  color: #555;
+}
+.modal .modal-dialog .modal-content .modal-footer {
+  border: 0;
 }
 
 .login-page {
@@ -568,7 +706,7 @@
 }
 @media only screen and (max-width: 768px) {
   .index-page .page-body {
-    padding: 42px 15px;
+    padding: 15px;
   }
 }
 .index-page .page-body .page-body-content {
@@ -587,9 +725,6 @@
 .table-filter {
   width: 100%;
   margin-top: 9px;
-  /* Checkbox görünümünü ekle */
-  /* Checkbox stilini ekle */
-  /* Checkbox işaretlendiğinde stilini ekle */
 }
 .table-filter .table-filter-container {
   width: 100%;
@@ -600,6 +735,11 @@
   align-items: center;
   justify-content: center;
 }
+@media only screen and (max-width: 768px) {
+  .table-filter .table-filter-container {
+    padding: 25px;
+  }
+}
 .table-filter .table-filter-container .table-filter-inner {
   max-width: 825px;
 }
@@ -609,13 +749,23 @@
   flex-wrap: wrap;
   gap: 21px;
 }
+@media only screen and (max-width: 768px) {
+  .table-filter .table-filter-container .table-filter-inner .table-filter-form .select-box {
+    width: 100%;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .table-filter .table-filter-container .table-filter-inner .table-filter-form .select-box .bootstrap-select {
+    width: 100%;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .table-filter .table-filter-container .table-filter-inner .table-filter-form button {
+    width: 100%;
+  }
+}
 .table-filter .bootstrap-select .dropdown-menu li a span.check-mark {
   display: none;
-}
-.table-filter .bootstrap-select .dropdown-menu li a {
-  padding-left: 35px; /* Checkbox'lar için sol boşluk */
-  position: relative;
-  display: flex;
 }
 .table-filter .dropdown-menu-footer {
   display: flex;
@@ -633,6 +783,11 @@
 .table-filter .dropdown-menu-footer .btn-ok {
   background-color: #007bff;
   color: white;
+}
+.table-filter .bootstrap-select .dropdown-menu li a {
+  padding-left: 35px;
+  position: relative;
+  display: flex;
 }
 .table-filter .bootstrap-select .dropdown-menu li a span.check-mark {
   display: none !important;
@@ -659,23 +814,75 @@
 }
 .table-filter .bootstrap-select .inner.show {
   max-height: 155px !important;
-  scrollbar-width: thin;
-  scrollbar-color: #387FF8 #f1f1f1;
+}
+.table-filter .bootstrap-select .inner.show::-webkit-scrollbar-track {
+  border-radius: 99px;
+  background: #ececec;
 }
 .table-filter .bootstrap-select .inner.show::-webkit-scrollbar {
   width: 3px;
-}
-.table-filter .bootstrap-select .inner.show::-webkit-scrollbar-track {
-  background: #387FF8;
+  height: 3px;
 }
 .table-filter .bootstrap-select .inner.show::-webkit-scrollbar-thumb {
-  background: #387FF8;
-  border-radius: 10px;
-  border: 2px solid #f1f1f1;
-}
-.table-filter .bootstrap-select .inner.show::-webkit-scrollbar-thumb:hover {
-  background: #387FF8;
+  border-radius: 9px;
+  background: #387ff8;
 }
 .table-filter .hidden-footer {
   display: none;
+}
+
+.sms-container {
+  width: 100%;
+  padding: 32px 25px;
+  border-radius: 12px;
+  margin-top: 32px;
+}
+.sms-container .title {
+  color: #fff;
+  font-family: "Poppins", sans-serif;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+.sms-container .sms-container-inner {
+  background-color: #fff;
+  max-width: 576px;
+  width: 576px;
+  border-radius: 12px;
+  padding: 22px 40px;
+}
+@media only screen and (max-width: 768px) {
+  .sms-container .sms-container-inner {
+    width: auto;
+  }
+}
+.sms-container .sms-container-inner form {
+  display: flex;
+  flex-direction: column;
+  row-gap: 32px;
+}
+.sms-container .sms-container-inner form label {
+  color: rgba(0, 0, 0, 0.87);
+  font-family: "Poppins", sans-serif;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+.sms-container .sms-container-inner form input,
+.sms-container .sms-container-inner form select,
+.sms-container .sms-container-inner form textarea {
+  height: 52px;
+  border-radius: 8px;
+  border: 1px solid #777;
+}
+.sms-container .sms-container-inner form textarea {
+  height: 116px;
+}
+.sms-container .sms-container-inner form .position-relative i {
+  font-size: 18px;
+  right: 10px;
+  top: 67%;
+  transform: translateY(-50%);
 }/*# sourceMappingURL=style.css.map */
