--- a/assets/scss/components/_sidebar.scss
+++ b/assets/scss/components/_sidebar.scss
@@ -8,8 +8,25 @@
     height: 100vh;
     border-right: 0.4px solid #969696;
     background: #fff;
+    z-index: 999;
+    @include mq(tablet-portrait-up) {
+        position: absolute;
+        width: 100%;
+        transform: translateX(-100%);
+    }
+    @include mq(phone-only) {
+        max-width: 100%;
+    }
     &.collapsed {
-        width: 72px;
+        @include mq(tablet-portrait-down) {
+            width: 72px;
+        }
+    }
+    &.active {
+        @include mq(tablet-portrait-up) {
+            width: 100%;
+            transform: translateX(0);
+        }
     }
     &-container {
         width: 100%;
@@ -25,6 +42,9 @@
         width: 100%;
         border-bottom: 1px solid #969696;
         padding: 15px 20px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
         .logo-md {
             width: 135.561px;
             height: 57.319px;
@@ -41,6 +61,13 @@
             img {
                 width: 100%;
                 height: 100%;
+            }
+        }
+        .sidebar-close {
+            font-size: 30px;
+            cursor: pointer;
+            @include mq(tablet-portrait-down) {
+                display: none;
             }
         }
     }
@@ -126,6 +153,10 @@
                 img {
                     transform: rotate(180deg);
                 }
+
+                @include mq(tablet-portrait-up) {
+                    display: none;
+                }
             }
             .logout-btn {
                 display: flex;
@@ -157,69 +188,90 @@
         }
     }
     &.collapsed {
-        .sidebar-header {
-            .logo-md {
-                display: none;
+        @include mq(tablet-portrait-down) {
+            .sidebar-header {
+                .logo-md {
+                    display: none;
+                }
+                .logo-sm {
+                    display: block;
+                }
             }
-            .logo-sm {
-                display: block;
-            }
-        }
-        .sidebar-content {
-            .nav {
-                .nav-item {
-                    .nav-link {
-                        justify-content: center;
-                        svg {
-                            width: 20px;
+            .sidebar-content {
+                .nav {
+                    .nav-item {
+                        .nav-link {
+                            justify-content: center;
+                            svg {
+                                width: 20px;
+                            }
+                            &.active {
+                                height: 27px;
+                                padding: 0px !important;
+                                border-radius: 0;
+                                background: transparent;
+                            }
+                            span {
+                                display: none;
+                                opacity: 0;
+                            }
                         }
-                        &.active {
-                            height: 27px;
-                            padding: 0px !important;
-                            border-radius: 0;
-                            background: transparent;
+                    }
+                }
+                .sidebar-btn-group {
+                    width: 100%;
+                    display: flex;
+                    flex-direction: column;
+                    row-gap: 35px;
+                    .toggle-btn {
+                        img {
+                            transform: rotate(0deg);
                         }
+                    }
+                    .logout-btn {
+                        width: 42px;
+                        padding: 10px !important;
                         span {
                             display: none;
-                            opacity: 0;
                         }
                     }
                 }
             }
-            .sidebar-btn-group {
-                width: 100%;
-                display: flex;
-                flex-direction: column;
-                row-gap: 35px;
-                .toggle-btn {
-                    img {
-                        transform: rotate(0deg);
-                    }
+            .sidebar-footer {
+                span {
+                    display: none;
                 }
-                .logout-btn {
-                    width: 42px;
-                    padding: 10px !important;
-                    span {
-                        display: none;
-                    }
-                }
-            }
-        }
-        .sidebar-footer {
-            span {
-                display: none;
             }
         }
     }
 }
-
+.hamburger-menu {
+    display: none;
+    width: 100%;
+    i {
+        font-size: 30px;
+        cursor: pointer;
+    }
+    @include mq(tablet-portrait-up) {
+        display: block;
+    }
+}
 #content {
     width: calc(100% - 250px);
-    margin-left: 250px; /* Content margin when sidebar is open */
+    margin-left: 250px;
     transition: all 0.3s;
+
+    @include mq(tablet-portrait-up) {
+        width: 100%;
+        margin-left: 0;
+    }
 }
 
 #sidebar.collapsed ~ #content {
     width: calc(100% - 72px);
-    margin-left: 72px; /* Content margin when sidebar is collapsed */
+    margin-left: 72px;
+    @include mq(tablet-portrait-up) {
+        width: 100%;
+        margin-left: 0;
+    }
 }
