--- a/assets/scss/pages/_customerdata.scss
+++ b/assets/scss/pages/_customerdata.scss
@@ -17,6 +17,9 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        @include mq(tablet-portrait-up) {
+            padding: 25px;
+        }
         .table-filter-inner {
             max-width: 825px;
             .table-filter-form {
@@ -24,18 +27,26 @@
                 justify-content: center;
                 flex-wrap: wrap;
                 gap: 21px;
+                .select-box {
+                    @include mq(tablet-portrait-up) {
+                        width: 100%;
+                    }
+                    .bootstrap-select {
+                        @include mq(tablet-portrait-up) {
+                            width: 100%;
+                        }
+                    }
+                }
+                button {
+                    @include mq(tablet-portrait-up) {
+                        width: 100%;
+                    }
+                }
             }
         }
     }
     .bootstrap-select .dropdown-menu li a span.check-mark {
         display: none;
-    }
-
-    /* Checkbox görünümünü ekle */
-    .bootstrap-select .dropdown-menu li a {
-        padding-left: 35px; /* Checkbox'lar için sol boşluk */
-        position: relative;
-        display: flex;
     }
     .dropdown-menu-footer {
         display: flex;
@@ -43,67 +54,71 @@
         padding: 10px;
         border-top: 1px solid #ddd;
         background-color: #f9f9f9;
-    }
 
-    .dropdown-menu-footer .btn-reset {
-        color: #007bff;
-        background: none;
-        border: none;
-        cursor: pointer;
-    }
+        .btn-reset {
+            color: #007bff;
+            background: none;
+            border: none;
+            cursor: pointer;
+        }
 
-    .dropdown-menu-footer .btn-ok {
-        background-color: #007bff;
-        color: white;
+        .btn-ok {
+            background-color: #007bff;
+            color: white;
+        }
     }
-    .bootstrap-select .dropdown-menu li a span.check-mark {
-        display: none !important;
-    }
-    /* Checkbox stilini ekle */
-    .bootstrap-select .dropdown-menu li a::before {
-        content: "";
-        position: absolute;
-        left: 12px;
-        top: 50%;
-        transform: translateY(-50%);
-        width: 16px;
-        height: 16px;
-        border: 1px solid #ccc;
-        border-radius: 3px;
-        background-color: #fff;
-    }
+    .bootstrap-select {
+        .dropdown-menu {
+            li {
+                a {
+                    padding-left: 35px;
+                    position: relative;
+                    display: flex;
+                    span.check-mark {
+                        display: none !important;
+                    }
+                    &::before {
+                        content: "";
+                        position: absolute;
+                        left: 12px;
+                        top: 50%;
+                        transform: translateY(-50%);
+                        width: 16px;
+                        height: 16px;
+                        border: 1px solid #ccc;
+                        border-radius: 3px;
+                        background-color: #fff;
+                    }
 
-    /* Checkbox işaretlendiğinde stilini ekle */
-    .bootstrap-select .dropdown-menu li a.selected::before {
-        content: "✓";
-        font-size: 12px;
-        color: #fff;
-        text-align: center;
-        line-height: 16px;
-        background-color: #387ff8;
-    }
-    .bootstrap-select .inner.show {
-        max-height: 155px !important;
-        scrollbar-width: thin; 
-        scrollbar-color: #387FF8 #f1f1f1;
-    }
-    
-    .bootstrap-select .inner.show::-webkit-scrollbar {
-        width: 3px;
-    }
-    
-    .bootstrap-select .inner.show::-webkit-scrollbar-track {
-        background: #387FF8;
-    }
-    
-    .bootstrap-select .inner.show::-webkit-scrollbar-thumb {
-        background: #387FF8;
-        border-radius: 10px;
-        border: 2px solid #f1f1f1;
-    }
-    
-    .bootstrap-select .inner.show::-webkit-scrollbar-thumb:hover {
-        background: #387FF8;
+                    &.selected::before {
+                        content: "✓";
+                        font-size: 12px;
+                        color: #fff;
+                        text-align: center;
+                        line-height: 16px;
+                        background-color: #387ff8;
+                    }
+                }
+            }
+        }
+        .inner {
+            &.show {
+                max-height: 155px !important;
+
+                &::-webkit-scrollbar-track {
+                    border-radius: 99px;
+                    background: #ececec;
+                }
+                &::-webkit-scrollbar {
+                    width: 3px;
+                    height: 3px;
+                }
+                &::-webkit-scrollbar-thumb {
+                    border-radius: 9px;
+                    background: #387ff8;
+                }
+            }
+        }
     }
     .hidden-footer {
         display: none;
