--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -13,7 +13,7 @@
             padding: 42px 30px;
         }
         @include mq(tablet-portrait-up) {
-            padding: 42px 15px;
+            padding: 15px;
         }
         .page-body-content {
             width: 100%;
