--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -6,6 +6,7 @@
 @import "./components/header";
 @import "./components/table";
 @import "./components/modal";
+@import "./components/dropdown";
 @import "./pages/login";
 @import "./pages/home";
 @import "./pages/customerdata";
