adding table row click dropdown

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -7,7 +7,8 @@
 @import "./components/table";
 @import "./components/modal";
 @import "./components/dropdown";
+@import "./components/pageHeader";
+@import "./components/table-dropdown";
 @import "./pages/login";
 @import "./pages/home";
-@import "./pages/customerdata";
 @import "./pages/sms";
