--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -495,7 +495,8 @@
 }
 .table-container .table-container-inner {
   width: 100%;
-  overflow-x: auto;
+  max-height: 709px;
+  overflow: auto;
 }
 .table-container .table-container-inner::-webkit-scrollbar-track {
   border-radius: 99px;
@@ -536,13 +537,39 @@
   cursor: pointer;
 }
 
-.modal .modal-dialog {
+.modal.settings-modal .modal-dialog {
   max-width: 360px;
 }
 @media only screen and (max-width: 768px) {
-  .modal .modal-dialog {
+  .modal.settings-modal .modal-dialog {
     max-width: var(--bs-modal-width);
   }
+}
+.modal.settings-modal .modal-dialog .modal-content .modal-header {
+  justify-content: center;
+  border-bottom: none;
+}
+.modal.settings-modal .modal-dialog .modal-content .modal-header .modal-title {
+  color: #000;
+  font-family: "Poppins", sans-serif;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+.modal#addCustomerModal .modal-dialog {
+  max-width: 80%;
+}
+@media only screen and (max-width: 768px) {
+  .modal#addCustomerModal .modal-dialog {
+    max-width: var(--bs-modal-width);
+  }
+}
+.modal .modal-dialog .btn-close {
+  top: 30px;
+  right: 30px;
+  z-index: 555;
+  cursor: pointer;
 }
 .modal .modal-dialog .modal-content .modal-header {
   justify-content: center;
@@ -551,7 +578,8 @@
 .modal .modal-dialog .modal-content .modal-header .modal-title {
   color: #000;
   font-family: "Poppins", sans-serif;
-  font-size: 18px;
+  text-align: center;
+  font-size: 34px;
   font-style: normal;
   font-weight: 500;
   line-height: normal;
@@ -569,6 +597,10 @@
   border-radius: 8px;
   border: 1px solid #c1c1c1;
 }
+.modal .modal-dialog .modal-content .modal-body .form-select {
+  height: 52px;
+  border: 1px solid #c1c1c1;
+}
 .modal .modal-dialog .modal-content .modal-body .position-relative {
   position: relative;
 }
@@ -583,6 +615,14 @@
 }
 .modal .modal-dialog .modal-content .modal-body .bi:hover {
   color: #555;
+}
+.modal .modal-dialog .modal-content button {
+  min-width: 250px;
+}
+@media only screen and (max-width: 768px) {
+  .modal .modal-dialog .modal-content button {
+    min-width: 100%;
+  }
 }
 .modal .modal-dialog .modal-content .modal-footer {
   border: 0;
@@ -720,6 +760,155 @@
   box-shadow: none !important;
 }
 
+.page-title-container {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+@media only screen and (max-width: 768px) {
+  .page-title-container {
+    flex-direction: column;
+  }
+}
+.page-title-container .page-title {
+  color: #000;
+  font-family: "Poppins", sans-serif;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  margin-top: 20px;
+}
+.page-title-container .page-title-select-group {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+}
+.page-title-container .page-title-select-group .select-box .dropdown {
+  width: -moz-fit-content;
+  width: fit-content;
+}
+.page-title-container .page-title-select-group .select-box .dropdown button {
+  background-color: #fff;
+}
+@media only screen and (max-width: 768px) {
+  .page-title-container .page-title-select-group .select-box .dropdown {
+    width: 100%;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .page-title-container .page-title-select-group .select-box {
+    width: 100%;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .page-title-container .page-title-select-group {
+    flex-direction: column;
+    width: 100%;
+  }
+}
+
+.page-card {
+  margin-top: 9px;
+}
+.page-card .page-card-container {
+  border-radius: 12px;
+  background-color: #fff;
+  padding: 25px 0;
+}
+@media only screen and (max-width: 768px) {
+  .page-card .page-card-container {
+    padding: 25px;
+  }
+}
+.page-card .page-card-container .page-card-inner {
+  padding: 0 20px;
+}
+@media only screen and (max-width: 768px) {
+  .page-card .page-card-container .page-card-inner {
+    flex-direction: column-reverse;
+    row-gap: 30px;
+  }
+}
+.page-card .page-card-container .page-card-inner .table-filter-form {
+  max-width: 825px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 21px;
+}
+@media only screen and (max-width: 768px) {
+  .page-card .page-card-container .page-card-inner .table-filter-form .select-box {
+    width: 100%;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .page-card .page-card-container .page-card-inner .table-filter-form .select-box .bootstrap-select {
+    width: 100%;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .page-card .page-card-container .page-card-inner .table-filter-form button {
+    width: 100%;
+  }
+}
+.page-card .page-card-container .page-card-inner .page-card-add-btn {
+  min-width: 141px;
+  color: #fff;
+  text-align: right;
+  font-family: "Poppins", sans-serif;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+.page-card .page-card-container .page-card-inner .page-card-add-btn span {
+  font-size: 24px;
+}
+@media only screen and (max-width: 768px) {
+  .page-card .page-card-container .page-card-inner .page-card-add-btn {
+    width: 100%;
+  }
+}
+
+.dropdown-menu-custom {
+  width: 150px;
+  z-index: 1000;
+  border-radius: 8px;
+  background: #fff;
+  box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.25);
+  display: none;
+  position: absolute;
+  transition: all 0.4s;
+}
+.dropdown-menu-custom.show {
+  display: block;
+}
+.dropdown-menu-custom ul {
+  padding: 10px 8px;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  row-gap: 6px;
+}
+.dropdown-menu-custom ul li {
+  list-style: none;
+}
+.dropdown-menu-custom ul li:hover {
+  background-color: #ccc;
+}
+.dropdown-menu-custom ul li a {
+  color: #000;
+  font-family: "Poppins", sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  text-decoration: none;
+  display: flex;
+  -moz-column-gap: 4px;
+       column-gap: 4px;
+}
 .login-page {
   width: 100%;
   height: 100vh;
@@ -843,58 +1032,6 @@
 }
 .index-page .page-body .page-body-content {
   width: 100%;
-}
-
-.page-title {
-  color: #000;
-  font-family: "Poppins", sans-serif;
-  font-size: 24px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
-}
-
-.table-filter {
-  width: 100%;
-  margin-top: 9px;
-}
-.table-filter .table-filter-container {
-  width: 100%;
-  border-radius: 12px;
-  background-color: #fff;
-  padding: 25px 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-@media only screen and (max-width: 768px) {
-  .table-filter .table-filter-container {
-    padding: 25px;
-  }
-}
-.table-filter .table-filter-container .table-filter-inner {
-  max-width: 825px;
-}
-.table-filter .table-filter-container .table-filter-inner .table-filter-form {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  gap: 21px;
-}
-@media only screen and (max-width: 768px) {
-  .table-filter .table-filter-container .table-filter-inner .table-filter-form .select-box {
-    width: 100%;
-  }
-}
-@media only screen and (max-width: 768px) {
-  .table-filter .table-filter-container .table-filter-inner .table-filter-form .select-box .bootstrap-select {
-    width: 100%;
-  }
-}
-@media only screen and (max-width: 768px) {
-  .table-filter .table-filter-container .table-filter-inner .table-filter-form button {
-    width: 100%;
-  }
 }
 
 .sms-container {
