--- a/assets/scss/components/_modal.scss
+++ b/assets/scss/components/_modal.scss
@@ -1,8 +1,40 @@
 .modal {
+    &.settings-modal {
+        .modal-dialog {
+            max-width: 360px;
+            @include mq(tablet-portrait-up) {
+                max-width: var(--bs-modal-width);
+            }
+            .modal-content {
+                .modal-header {
+                    justify-content: center;
+                    border-bottom: none;
+                    .modal-title {
+                        color: #000;
+                        font-family: "Poppins", sans-serif;
+                        font-size: 18px;
+                        font-style: normal;
+                        font-weight: 500;
+                        line-height: normal;
+                    }
+                }
+            }
+        }
+    }
+    &#addCustomerModal {
+        .modal-dialog {
+            max-width: 80%;
+            @include mq(tablet-portrait-up) {
+                max-width: var(--bs-modal-width);
+            }
+        }
+    }
     .modal-dialog {
-        max-width: 360px;
-        @include mq(tablet-portrait-up) {
-            max-width: var(--bs-modal-width);
+        .btn-close {
+            top: 30px;
+            right: 30px;
+            z-index: 555;
+            cursor: pointer;
         }
         .modal-content {
             .modal-header {
@@ -11,7 +43,8 @@
                 .modal-title {
                     color: #000;
                     font-family: "Poppins", sans-serif;
-                    font-size: 18px;
+                    text-align: center;
+                    font-size: 34px;
                     font-style: normal;
                     font-weight: 500;
                     line-height: normal;
@@ -31,11 +64,15 @@
                     border-radius: 8px;
                     border: 1px solid #c1c1c1;
                 }
+                .form-select {
+                    height: 52px;
+                    border: 1px solid #c1c1c1;
+                }
                 .position-relative {
                     position: relative;
-                  }
-                  
-                  .bi {
+                }
+
+                .bi {
                     position: absolute;
                     right: 12px;
                     top: 68%;
@@ -43,11 +80,17 @@
                     cursor: pointer;
                     font-size: 1.2rem;
                     color: #888;
-                  
+
                     &:hover {
-                      color: #555;
+                        color: #555;
                     }
-                  }
+                }
+            }
+            button {
+                min-width: 250px;
+                @include mq(tablet-portrait-up) {
+                    min-width: 100%;
+                }
             }
             .modal-footer {
                 border: 0;
