--- a/assets/scss/components/_table.scss
+++ b/assets/scss/components/_table.scss
@@ -7,7 +7,8 @@
     overflow: hidden;
     .table-container-inner {
         width: 100%;
-        overflow-x: auto;
+        max-height: 709px;
+        overflow: auto;
         &::-webkit-scrollbar-track {
             border-radius: 99px;
             background: #ececec;
